<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_white_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/settings"/>
    </group>
    <item android:id="@+id/nav_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:iconTint="@android:color/white"
        android:title="@string/info"/>
    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_white_24dp"
        android:iconTint="@android:color/white"
        android:title="@string/log_out"/>
</menu>